float button mobile view fix

--- a/src/app/card-box/card-box.component.css
+++ b/src/app/card-box/card-box.component.css
@@ -19,7 +19,7 @@ h5{
 }
 
 .btn-shadow {
-    box-shadow: 0 5px 6px rgba(0,0,0,0.12), 0 5px 5px rgba(0,0,0,0.24);
+    box-shadow: 0 7px 10px rgba(0,0,0,0.12), 0 7px 10px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
     
@@ -40,4 +40,19 @@ h5{
 
 .btn-invisible {
     display: none;
+}
+
+.btn-size{
+    font-size: 2.5rem;
+}
+
+@media(max-width: 575px){
+    .btn-size{
+        font-size: 4.5rem;
+    }
+    
+    .position{
+        bottom: 4rem;
+        right:  4rem;
+    }
 }
